src/test/deca/context/invalid/created/redef-method-mauvais-chgt-type.deca
class A{}
class B extends A{}
class C{
	A fonction(){
		A a;
		return a;
	}
}
class D extends C{
	E fonction(){
		E e;
		return e;
	}
}
class E{

}